// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Should open an overlay 1`] = `
"<div>
  <div class=\\"backdrop visible fixed\\"></div>
</div>
<div>
  <div class=\\"container\\">
    <div class=\\"overlay\\">
      <section class=\\"content\\">
        <header>Assignment<span class=\\"icon su-x clickable\\" aria-label=\\"su-x\\" role=\\"button\\" tabindex=\\"0\\"></span></header>
        <article>
          <div class=\\"datagrid\\">
            <div class=\\"datagrid\\"></div>
          </div>
        </article>
        <footer>
          <button class=\\"button primary\\" type=\\"button\\"><span class=\\"text\\">sulu_admin.confirm</span></button>
        </footer>
      </section>
    </div>
  </div>
</div>"
`;

exports[`Show with default plus icon 1`] = `
Array [
  <div>
    <div
      class="header emptyList"
    >
      <button
        class="button left"
        type="button"
      >
        <span
          aria-label="su-plus"
          class="su-plus"
        />
      </button>
      <div
        class="label"
      />
    </div>
    <ul
      class="list"
    />
  </div>,
  <div />,
]
`;

exports[`Show with passed icon 1`] = `
Array [
  <div>
    <div
      class="header emptyList"
    >
      <button
        class="button left"
        type="button"
      >
        <span
          aria-label="su-document"
          class="su-document"
        />
      </button>
      <div
        class="label"
      />
    </div>
    <ul
      class="list"
    />
  </div>,
  <div />,
]
`;

exports[`Show with passed label 1`] = `
Array [
  <div>
    <div
      class="header emptyList"
    >
      <button
        class="button left"
        type="button"
      >
        <span
          aria-label="su-plus"
          class="su-plus"
        />
      </button>
      <div
        class="label"
      >
        0 Select Snippets
      </div>
    </div>
    <ul
      class="list"
    />
  </div>,
  <div />,
]
`;

exports[`Show with passed values as items 1`] = `
Array [
  <div>
    <div
      class="header"
    >
      <button
        class="button left"
        type="button"
      >
        <span
          aria-label="su-plus"
          class="su-plus"
        />
      </button>
      <div
        class="label"
      />
    </div>
    <ul
      class="list"
    >
      <li
        class="listElement"
      >
        <div
          class="item"
        >
          <span
            class="dragHandle"
          >
            <span
              aria-label="su-shift"
              class="su-shift"
            />
            <span
              class="index"
            >
              0
            </span>
          </span>
          <div
            class="content"
          >
            1
          </div>
          <button
            class="removeButton"
            type="button"
          >
            <span
              aria-label="su-trash"
              class="su-trash"
            />
          </button>
        </div>
      </li>
      <li
        class="listElement"
      >
        <div
          class="item"
        >
          <span
            class="dragHandle"
          >
            <span
              aria-label="su-shift"
              class="su-shift"
            />
            <span
              class="index"
            >
              1
            </span>
          </span>
          <div
            class="content"
          >
            2
          </div>
          <button
            class="removeButton"
            type="button"
          >
            <span
              aria-label="su-trash"
              class="su-trash"
            />
          </button>
        </div>
      </li>
      <li
        class="listElement"
      >
        <div
          class="item"
        >
          <span
            class="dragHandle"
          >
            <span
              aria-label="su-shift"
              class="su-shift"
            />
            <span
              class="index"
            >
              2
            </span>
          </span>
          <div
            class="content"
          >
            5
          </div>
          <button
            class="removeButton"
            type="button"
          >
            <span
              aria-label="su-trash"
              class="su-trash"
            />
          </button>
        </div>
      </li>
    </ul>
  </div>,
  <div />,
]
`;
